Thu Feb 11  9:51:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSUserDefaults.m: ([-dealloc]) invalidate timer so we can't
	get sent a timeout message after d4eallocation - fixes occasional
	crashes when the defaults database has been unreadable.

Thu Feb 11  7:27:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSConnection.m: Tidy up with bugfixes and better distributed
	retain/release for triangle connections.
	* Source/NSDistantObject.m: ditto
	* Source/TcpPort.m: ditto
	* Source/include/DistributedObjects.h: ditto
	* Source/include/NSConnection.h: ditto
	* Source/include/NSDistantObject.h: ditto

1999-02-09  Adam Fedor  <fedor@gnu.org>

	* Source/HashTable.m: Moved to extensions.
	* Source/List.m, Source/NXStringTable*, Source/Storage.m,
	Source/objc/HashTable.h, Source/objc/List.h,
	Source/objc/NXStringTable.h, Source/objc/Storage.h:
	Likewise.

Tue Feb  9 14:08:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSProcessInfo.m: Fixed login in #if construct so things
	will link again.

1999-02-08  Adam Fedor  <fedor@gnu.org>

	* Source/include/fake-main.h: Leave off __ELF__, only use
	autoload of init method if SYS_AUTOLOAD.
	* Source/NSProcessInfo.m: Likewise.

Mon Feb  8 10:05:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/include/NSByteOrder.h: Implemented a full set of byte-swapping
	inline functions for integers with known sizes.
	* Source/NSData.m: Corrected serialization/deserialization routines to
	do byte-swapping using new functions.
	* Source/UnixFileHandle.m: Use new byte-swapping functions rather than
	htonl(), htons(), ntohl(), ntohs().
	* Source/NSUnarchiver.m: Use new byte-swapping functions.

1999-02-04 Adam Fedor <fedor@gnu.org>

	* config/config.printf.c: New file.
	* configure.in: Test for broken register_printf function.

	* Source/NSLog.m (_NSLog_standard_printf_handler): Use fputs to
	avoid possible double expansion of format chars.
